Segundo commit, mejoras visuales en la pag, regreso a principal innerprint

--- a/promocion-riqueza.html
+++ b/promocion-riqueza.html
@@ -2,11 +2,39 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>  
   <title>Reprogramación hacia la Riqueza | InnerPrint</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet"/>
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <meta name="description" content="Cuaderno de 21 días para reprogramar tu subconsciente y activar una nueva relación con el dinero. Inspirado en Joseph Murphy.">
+  <meta name="keywords" content="riqueza, subconsciente, abundancia, desarrollo personal, InnerPrint, Joseph Murphy">
+  <meta name="author" content="Lenin F. Calle Altamirano">
+  <meta property="og:title" content="Reprogramación hacia la Riqueza - InnerPrint">
+  <meta property="og:description" content="Un cuaderno de 21 días para transformar tu mente y atraer abundancia consciente.">
+  <meta property="og:image" content="https://verdeinkfernal.github.io/innerprint-editorial/images/portada-riqueza.jpg">
+  <meta property="og:url" content="https://verdeinkfernal.github.io/innerprint-editorial/promocion-riqueza.html">
+  <meta property="og:type" content="website">
+  
+  <!-- Favicon -->
+<link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+<link rel="android-chrome-192x192" sizes="192x192" href="favicon/android-chrome-192x192">
+<link rel="android-chrome-512x512" sizes="512x512" href="favicon/android-chrome-512x512">
+<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+<link rel="manifest" href="site.webmanifest"> <!-- opcional -->
+<meta name="msapplication-TileColor" content="#2d3b2d">
+<meta name="theme-color" content="#2d3b2d">
+
+<!-- Fuentes -->
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet"/>
+  
+<!-- Animaciones AOS -->
+<link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+
+<!-- Estilos -->
+<link rel="stylesheet" href="style.css" />
+
+
+  
   <style>
     /* Estilos específicos para esta página */
     .hero-rico {
@@ -23,6 +51,7 @@
       gap: 25px;
       margin: 40px auto;
       max-width: 900px;
+      
     }
     .benefit-card {
       background: white;
@@ -31,6 +60,7 @@
       box-shadow: 0 5px 15px rgba(0,0,0,0.08);
       text-align: left;
       transition: transform 0.3s ease;
+      
     }
     .benefit-card:hover {
       transform: translateY(-5px);
@@ -54,9 +84,30 @@
 </head>
 <body>
 
+  <!-- Menú de navegación -->
+  <nav class="navbar" data-aos="fade-down">
+    <div class="container">
+      <a href="index.html" class="logo">InnerPrint</a>
+      <div class="nav-links">
+        <a href="index.html" class="logo">Editorial</a>
+        <!--<a href="promocion-riqueza.html">Reprogramación hacia la Riqueza</a> -->
+      </div>
+    </div>
+  </nav>
+
+  <!-- Botón de volver (opcional, debajo del menú)
+  <div class="container" style="text-align: left; margin: 15px 0;">
+    <a href="index.html" class="btn btn-secondary" style="padding: 8px 15px; font-size: 0.9rem;">← Volver a InnerPrint</a>
+  </div>
+  <title>Reprogramación hacia la Riqueza | InnerPrint</title>
+  <link rel="stylesheet" href="style.css" /> -->
+
   <!-- Portada específica para el libro -->
+
+
   <section class="hero-rico" data-aos="fade-in">
     <div class="container">
+      <img src="images/portada-riqueza.png" alt="Portada del libro: Reprogramación hacia la Riqueza" style="max-width: 300px; border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.15); margin-bottom: 20px;">
       <h1>Reprogramación hacia la Riqueza</h1>
       <p class="subtitle">Cuaderno de 21 Días para Reprogramar tu Subconsciente</p>
       <p class="tagline">
@@ -72,7 +123,6 @@
   <!-- Bienvenida del libro -->
   <section class="section" data-aos="fade-up">
     <div class="container" style="text-align: center;">
-    <img src="images/portada-riqueza.png" alt="Reprogramación hacia la Riqueza - InnerPrint" style="max-width: 300px; border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.15); margin-bottom: 20px;">
       <h2>Un viaje de transformación interior</h2>
       <p>
         Este no es un cuaderno más. Es un <strong>espacio de transformación</strong>, diseñado para ayudarte a activar tu poder interior, fortalecer tus creencias positivas respecto del dinero, y conectar con una versión de ti más próspera, enfocada y creativa.
@@ -103,7 +153,7 @@
           <h4>🌀 Enfoque VAK</h4>
           <p>Visual, Auditivo, Kinestésico: aprende y transformas por los tres canales del ser.</p>
         </div>
-        <div class="benefit-card">
+        <div class="benefit-card"> 
           <h4>🌙 Ejercicios nocturnos</h4>
           <p>Reprograma tu mente justo antes de dormir, cuando tu subconsciente está más receptivo.</p>
         </div>
@@ -121,7 +171,7 @@
       <p>
         Usa audífonos para profundizar tu práctica y crear una experiencia más inmersiva.
       </p>
-      <a href="https://youtube.com/@innerprint" target="_blank" class="btn btn-primary">Ir al canal de YouTube →</a>
+      <a href="https://www.youtube.com/channel/UCARzxLxD08G7SW6APoBVj-w" target="_blank" class="btn btn-primary">Ir al canal de YouTube →</a>
     </div>
   </section>
 
@@ -171,7 +221,7 @@
         <button type="submit" class="btn btn-primary">Recibir muestra gratis</button>
       </form>
       <p style="margin-top: 20px;">
-        <a href="https://gumroad.com/l/tucodigo" target="_blank" class="btn btn-secondary">Comprar ahora – $9.99</a>
+        <a href="https://leninferno.gumroad.com/l/R21DRIQUEZA" target="_blank" class="btn btn-secondary">Comprar ahora – $9.99</a>
       </p>
     </div>
   </section>
