--- a/promocion-riqueza.html
+++ b/promocion-riqueza.html
@@ -2,85 +2,38 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Reprogramación hacia la Riqueza | InnerPrint</title>
   <meta name="description" content="Cuaderno de 21 días para reprogramar tu subconsciente y activar una nueva relación con el dinero. Inspirado en Joseph Murphy.">
   <meta name="keywords" content="riqueza, subconsciente, abundancia, desarrollo personal, InnerPrint, Joseph Murphy">
   <meta name="author" content="Lenin F. Calle Altamirano">
+
+  <!-- Open Graph / Social -->
   <meta property="og:title" content="Reprogramación hacia la Riqueza - InnerPrint">
   <meta property="og:description" content="Un cuaderno de 21 días para transformar tu mente y atraer abundancia consciente.">
-  <meta property="og:image" content="https://verdeinkfernal.github.io/innerprint-editorial/images/portada-riqueza.jpg">
+  <meta property="og:image" content="https://verdeinkfernal.github.io/innerprint-editorial/images/portada-riqueza.png">
   <meta property="og:url" content="https://verdeinkfernal.github.io/innerprint-editorial/promocion-riqueza.html">
   <meta property="og:type" content="website">
-  
+
   <!-- Favicon -->
-<link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-<link rel="android-chrome-192x192" sizes="192x192" href="favicon/android-chrome-192x192">
-<link rel="android-chrome-512x512" sizes="512x512" href="favicon/android-chrome-512x512">
-<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-<link rel="manifest" href="site.webmanifest"> <!-- opcional -->
-<meta name="msapplication-TileColor" content="#2d3b2d">
-<meta name="theme-color" content="#2d3b2d">
+  <link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+  <link rel="android-chrome-192x192" sizes="192x192" href="favicon/android-chrome-192x192.png">
+  <link rel="android-chrome-512x512" sizes="512x512" href="favicon/android-chrome-512x512.png">
+  <link rel="manifest" href="site.webmanifest">
+  <meta name="msapplication-TileColor" content="#2d3b2d">
+  <meta name="theme-color" content="#2d3b2d">
 
-<!-- Fuentes -->
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet"/>
-  
-<!-- Animaciones AOS -->
-<link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <!-- Fuentes -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 
-<!-- Estilos -->
-<link rel="stylesheet" href="style.css" />
+  <!-- Animaciones AOS -->
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
-
-  
-  <style>
-    /* Estilos específicos para esta página */
-    .hero-rico {
-      background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1450101499163-c8848c66ca85?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
-      background-size: cover;
-      background-position: center;
-      color: white;
-      text-align: center;
-      padding: 140px 20px;
-    }
-    .benefits {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 25px;
-      margin: 40px auto;
-      max-width: 900px;
-      
-    }
-    .benefit-card {
-      background: white;
-      padding: 25px;
-      border-radius: 12px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.08);
-      text-align: left;
-      transition: transform 0.3s ease;
-      
-    }
-    .benefit-card:hover {
-      transform: translateY(-5px);
-    }
-    .benefit-card h4 {
-      color: #2D3B2D;
-      margin-bottom: 10px;
-      font-family: 'Playfair Display', serif;
-    }
-    .testimonials {
-      max-width: 700px;
-      margin: 50px auto;
-      font-style: italic;
-      color: #555;
-      line-height: 1.8;
-    }
-    .testimonials strong {
-      color: #2D3B2D;
-    }
-  </style>
+  <!-- Estilos principales -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -89,25 +42,15 @@
     <div class="container">
       <a href="index.html" class="logo">InnerPrint</a>
       <div class="nav-links">
-        <a href="index.html" class="logo">Editorial</a>
-        <!--<a href="promocion-riqueza.html">Reprogramación hacia la Riqueza</a> -->
+        <a href="index.html"class="logo">Editorial</a>
       </div>
     </div>
   </nav>
 
-  <!-- Botón de volver (opcional, debajo del menú)
-  <div class="container" style="text-align: left; margin: 15px 0;">
-    <a href="index.html" class="btn btn-secondary" style="padding: 8px 15px; font-size: 0.9rem;">← Volver a InnerPrint</a>
-  </div>
-  <title>Reprogramación hacia la Riqueza | InnerPrint</title>
-  <link rel="stylesheet" href="style.css" /> -->
-
   <!-- Portada específica para el libro -->
-
-
   <section class="hero-rico" data-aos="fade-in">
     <div class="container">
-      <img src="images/portada-riqueza.png" alt="Portada del libro: Reprogramación hacia la Riqueza" style="max-width: 300px; border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.15); margin-bottom: 20px;">
+      <img src="images/portada-riqueza.png" alt="Portada del libro: Reprogramación hacia la Riqueza" class="book-cover" style="max-width: 280px; height: auto; border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.15); margin-bottom: 20px;">
       <h1>Reprogramación hacia la Riqueza</h1>
       <p class="subtitle">Cuaderno de 21 Días para Reprogramar tu Subconsciente</p>
       <p class="tagline">
@@ -122,7 +65,7 @@
 
   <!-- Bienvenida del libro -->
   <section class="section" data-aos="fade-up">
-    <div class="container" style="text-align: center;">
+    <div class="container">
       <h2>Un viaje de transformación interior</h2>
       <p>
         Este no es un cuaderno más. Es un <strong>espacio de transformación</strong>, diseñado para ayudarte a activar tu poder interior, fortalecer tus creencias positivas respecto del dinero, y conectar con una versión de ti más próspera, enfocada y creativa.
@@ -175,7 +118,7 @@
     </div>
   </section>
 
-  <!-- Glosario (destacado) -->
+  <!-- Glosario -->
   <section class="section gray" data-aos="fade-up">
     <div class="container">
       <h2>Basado en principios profundos</h2>
@@ -192,7 +135,7 @@
     </div>
   </section>
 
-  <!-- Testimonios (futuros, puedes agregarlos después) -->
+  <!-- Testimonios -->
   <section class="section" data-aos="fade-up">
     <div class="container">
       <h2>Lo que dicen quienes lo han vivido</h2>
@@ -235,12 +178,14 @@
   </footer>
 
   <!-- AOS Scroll Animations -->
-  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <script>
-    AOS.init({
-      duration: 800,
-      easing: 'ease-out-quart',
-      once: true
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js" defer></script>
+  <script defer>
+    document.addEventListener("DOMContentLoaded", function () {
+      AOS.init({
+        duration: 800,
+        easing: 'ease-out-quart',
+        once: true
+      });
     });
   </script>
 </body>
